# ravenx-conjecturebench

./: .gitignore  README.md  pyproject.toml
configs/: lora_config.yaml
data/: conjecturebench.json  seed_examples.json
formal_verification/: dgg_counterexample.lean  verify_dgg.py
prompts/: universal_conjecture.py
scripts/: download_dataset.py
src/: evaluate.py  lean_fire.py  train_conjecture.py
