[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ravenx-conjecturebench"
version = "0.1.0"
description = "MLX-native conjecture generation and autoformalisation evaluation for Apple Silicon"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Gabriel Garcia", email = "sanjosepcrepair@gmail.com"}]
keywords = ["mlx", "lean4", "theorem-proving", "conjecturing", "autoformalisation", "apple-silicon"]

dependencies = [
    "mlx>=0.22",
    "mlx-lm>=0.22",
    "datasets>=2.19",
    "huggingface-hub>=0.23",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["src*"]
